# c-databases

./: .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  clang_format.yml  clang_tidy.yml
.github/workflows/: check-code-formatting.yml  cross-platform-build-and-test.yml  generic-jobs.yml  linux_workflow.yml
cmake/: run_clang_format.cmake  utils.cmake
configurations/: .cmake-format.py  c_databases_config.h.in  clang_tidy.yml
scripts/: build_and_test.py  build_docker_image.py  build_docker_image_reclone.py  in_docker_runner.py  run_clang_format.py  run_clang_tidy.py  run_cmake_format.py  run_container.py  run_dev_container.py  update_dev_container_files.py  update_dockerignore.py  utils.py
src/: CMakeLists.txt
src/doubly_linked_list/: CMakeLists.txt  doubly_linked_list.c
src/doubly_linked_list/include/: doubly_linked_list.h
src/errors/: errors.c
src/errors/include/: errors.h
src/vector/: CMakeLists.txt  vector.c
src/vector/include/: vector.h
test/: CMakeLists.txt
test/doubly_linked_list_test/: CMakeLists.txt  doubly_linked_list_test.cpp
test/test_utils/: CMakeLists.txt  test_utils.cpp
test/test_utils/include/: test_utils.hpp
test/vector_test/: CMakeLists.txt  vector_test.cpp
